force-app/main/default/objects/Technical_Baseline__c/Technical_Baseline__c.object-meta.xml
<CustomObject>
    <label>기술 기준선</label>
    <nameField>
        <label>Technical Baseline Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>