force-app/main/default/objects/Technical_Baseline__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>승인 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미승인</fullName>
                <default>true</default>
                <label>미승인</label>
            </value>
            <value>
                <fullName>승인</fullName>
            </value>
            <value>
                <fullName>반려</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>