force-app/main/default/objects/Technical_Baseline__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>승인일</label>
    <type>Date</type>
</CustomField>