force-app/main/default/objects/Technical_Baseline__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>승인자</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>승인한 Baseline 목록</relationshipLabel>
    <relationshipName>Approved_Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>