force-app/main/default/objects/Technical_Baseline__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>계약</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Technical Baseline</relationshipLabel>
    <relationshipName>Technical_Baseline</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>