force-app/main/default/objects/Technical_Baseline__c/fields/Customer_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Commitment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>고객 약속</label>
    <referenceTo>Customer_Commitment__c</referenceTo>
    <relationshipLabel>Technical Baseline</relationshipLabel>
    <relationshipName>Technical_Baseline</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>