force-app/main/default/objects/Technical_Baseline__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>납기</label>
    <type>Date</type>
</CustomField>