force-app/main/default/objects/Technical_Baseline__c/fields/ERP_Order_No__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_No__c</fullName>
    <label>ERP 발주번호</label>
    <length>50</length>
    <type>Text</type>
</CustomField>