force-app/main/default/objects/Technical_Baseline__c/fields/ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Status__c</fullName>
    <label>ERP 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미발주</fullName>
            </value>
            <value>
                <fullName>발주</fullName>
            </value>
            <value>
                <fullName>생산중</fullName>
            </value>
            <value>
                <fullName>출하</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>