force-app/main/default/objects/Technical_Baseline__c/fields/ERP_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>ERP_Updated_At__c</fullName>
    <label>ERP 갱신 시각</label>
    <type>DateTime</type>
</CustomField>