force-app/main/default/objects/Technical_Baseline__c/fields/Handoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Status__c</fullName>
    <label>Handoff 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_READY</fullName>
                <default>true</default>
                <label>NOT_READY</label>
            </value>
            <value>
                <fullName>READY</fullName>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>