force-app/main/default/objects/Technical_Baseline__c/fields/Open_Issue__c.field-meta.xml
<CustomField>
    <fullName>Open_Issue__c</fullName>
    <label>미해결 이슈</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>