force-app/main/default/objects/Technical_Baseline__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사업기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Technical Baseline</relationshipLabel>
    <relationshipName>Technical_Baseline</relationshipName>
    <type>Lookup</type>
</CustomField>