force-app/main/default/objects/Technical_Baseline__c/fields/PLM_Revision__c.field-meta.xml
<CustomField>
    <fullName>PLM_Revision__c</fullName>
    <label>PLM 리비전</label>
    <length>80</length>
    <type>Text</type>
</CustomField>