force-app/main/default/objects/Technical_Baseline__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>제품</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Technical Baseline</relationshipLabel>
    <relationshipName>Technical_Baseline</relationshipName>
    <type>Lookup</type>
</CustomField>