force-app/main/default/objects/Technical_Baseline__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>견적</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Technical Baseline</relationshipLabel>
    <relationshipName>Technical_Baseline</relationshipName>
    <type>Lookup</type>
</CustomField>