force-app/main/default/objects/Technical_Baseline__c/fields/Risk_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation__c</fullName>
    <label>리스크 대응</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>