force-app/main/default/objects/Technical_Baseline__c/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <label>특수조건</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>