force-app/main/default/objects/Technical_Baseline__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>사양</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>