force-app/main/default/objects/Technical_Baseline__c/fields/Technical_Review__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>기술검토</label>
    <referenceTo>Technical_Review__c</referenceTo>
    <relationshipLabel>Technical Baseline</relationshipLabel>
    <relationshipName>Technical_Baseline</relationshipName>
    <type>Lookup</type>
</CustomField>