force-app/main/default/objects/Technical_Baseline__c/fields/Technical_Risk__c.field-meta.xml
<CustomField>
    <fullName>Technical_Risk__c</fullName>
    <label>기술 리스크</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>