force-app/main/default/objects/Technical_Baseline__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>버전</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>